fix(core): protect option longs and restore delivery ADL eligibility